@@ -1,6 +1,6 @@
 /* -*-C-*- */
 
-/* $Id: lex.l,v 1.74 2007-01-26 17:52:23 nicm Exp $ */
+/* $Id: lex.l,v 1.75 2007-02-08 11:30:22 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -93,6 +93,7 @@ char 				*read_str(char, int);
 (megabyte|megabytes|m|M|mb|MB) return (TOKMEGABYTES);
 (minute|minutes) return (TOKMINUTES);
 (month|months) return (TOKMONTHS);
+(second|seconds) return (TOKSECONDS);
 (week|weeks) return (TOKWEEKS);
 (year|years) return (TOKYEARS);
 account	return (TOKACCOUNT);
@@ -111,9 +112,9 @@ attachment return (TOKATTACHMENT);
 body return (TOKBODY);
 cache return (TOKCACHE);
 case return (TOKCASE);
+compress return (TOKCOMPRESS);
 continue return (TOKCONTINUE);
 count return (TOKCOUNT);
-compress return (TOKCOMPRESS);
 disabled return (TOKDISABLED);
 domain return (TOKDOMAIN);
 domains return (TOKDOMAINS);
@@ -121,6 +122,8 @@ dotlock return (LCKDOTLOCK);
 drop return (TOKDROP);
 exec return (TOKEXEC);
 fcntl return (LCKFCNTL);
+file-group return (TOKFILEGROUP);
+file-umask return (TOKFILEUMASK);
 flock return (LCKFLOCK);
 folder return (TOKFOLDER);
 from-headers return (TOKFROMHEADERS);
@@ -141,9 +144,9 @@ match return (TOKMATCH);
 matched return (TOKMATCHED);
 mbox return (TOKMBOX);
 nntp return (TOKNNTP);
+no-received return (TOKNORECEIVED);
 none return (TOKNONE);
 not return (TOKNOT);
-no-received return (TOKNORECEIVED);
 or return (TOKOR);
 pass return (TOKPASS);
 pipe return (TOKPIPE);
@@ -154,7 +157,6 @@ proxy return (TOKPROXY);
 purge-after return (TOKPURGEAFTER);
 returns return (TOKRETURNS);
 rewrite return (TOKREWRITE);
-(second|seconds) return (TOKSECONDS);
 server return (TOKSERVER);
 set return (TOKSET);
 size return (TOKSIZE);
